--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     {% block header_refrence %}{% endblock %}
 </head>
 <body>
+<header id="main_navigation">
+        <h1><a href="">Asoo Blog</a></h1>
+    </header>
 {% block content %}{% endblock %}
 {% block footer_refrences %}{% endblock %}
 </body>
