--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -1,7 +1,7 @@
 {% load static %}
 <li>
                 <article class="post">
-                    <a href="">
+                    <a href="{% url 'post-detail-page' slug='learning-django' %}">
                         <img src="{% static 'blog/images/python.png' %}" alt="django">
                         <div class="post-content">
                             <h3>blog</h3>
