--- a/blog/static/blog/index.css
+++ b/blog/static/blog/index.css
@@ -71,6 +71,7 @@
     width: 60rem;
     margin: 10px auto;
     box-shadow: 1px 1px 12px rgba(0, 0, 0, .4);
+
 }
 
 #latest-posts h2 {
@@ -84,6 +85,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
 }
 
 #latest-posts li {
@@ -147,6 +149,7 @@
     width: 200px;
 }
 .post a{
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
