--- a/blog/templates/blog/all-posts.html
+++ b/blog/templates/blog/all-posts.html
@@ -9,14 +9,13 @@
     My blog
 {% endblock %}
 {% block content %}
-<section id="all-posts">
-    <h2>This is all posts</h2>
+    <section id="all-posts">
+        <h2>This is all posts</h2>
 
-    <ul>
-        {% include 'blog/includes/post.html' %}
-        {% include 'blog/includes/post.html' %}
-        {% include 'blog/includes/post.html' %}
-        {% include 'blog/includes/post.html' %}
-    </ul>
-</section>
+        <ul>
+            {% for post in allPosts %}
+                {% include 'blog/includes/post.html' %}
+            {% endfor %}
+        </ul>
+    </section>
 {% endblock %}
