--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -7,25 +7,24 @@
 {% endblock %}
 
 {% block title %}
-    title of the post
+   {{ post.title }}
 {% endblock %}
 
 {% block content %}
     <section id="summary">
-        <h2>post-title</h2>
+        <h2>{{ post.title|title }}</h2>
         <article>
-            <img src="{% static 'blog/images/python.png' %}" alt="post image alt">
+            <img src="{% static 'blog/images/'|add:post.image %}" alt="post image alt">
             <address>
-                by top learn
+                {{ post.author}}
             </address>
             <div>
-                last updated on <time>July 20th</time>
+                last updated on <time>{{ post.date|date:'D M Y'}}</time>
             </div>
         </article>
     </section>
 
     <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aspernatur cum deleniti deserunt dolores facere in modi necessitatibus nihil officiis perspiciatis porro, quas recusandae unde ut? Accusamus aliquam blanditiis consequatur eligendi facere, fugiat illum in ipsa iure necessitatibus, nihil non officia recusandae tempora temporibus ullam voluptates. Accusantium assumenda deleniti illum!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus esse illo ipsa molestiae molestias natus reprehenderit veritatis. Atque deleniti eligendi esse ipsam, molestias nobis numquam quam recusandae? Aspernatur consequatur consequuntur molestias necessitatibus rem. Autem commodi consequatur dolorum eos ipsa magnam, maiores minima natus, odit quae quo ratione, sint vel.</p>
+        {{ post.content|linebreaks }}
     </main>
 {% endblock %}
